# logitech-g910-rs

./: Cargo.toml
pcap/: g602-handshake-off.pcap
pcap/g602/handshake/: handshake.pcap
pcap/g910/color/: e-red.pcap  q-red.pcap  r-red.pcap  space-black.pcap  space-black2.pcap  space-blue.pcap  space-blue2.pcap  space-cyan.pcap  space-cyan2.pcap  space-gray.pcap  space-gray2.pcap  space-green.pcap  space-green2.pcap  space-magenta.pcap  space-magenta2.pcap  space-red.pcap  space-red2.pcap  space-white.pcap  space-white2.pcap  space-yellow.pcap  space-yellow2.pcap  w-red.pcap
pcap/g910/handshake/: handshake.pcap  handshake2.pcap  handshake3.pcap  handshake4.pcap  handshake5.pcap
pcap/g910/switch/: colorsettings.pcap  colorsettings2.pcap  gamemodesettings.pcap  gamemodesettings2.pcap
src/: color.rs  consts.rs  keys.rs  main.rs  print.rs  replay.rs  test.rs  usb.rs  utils.rs
